--- a/css/estilo-productos.css
+++ b/css/estilo-productos.css
@@ -25,13 +25,13 @@ button {
     cursor: pointer;
 }
 
-#contenedor-productos h2{
+#contenedorDeProductos h2{
     flex-basis: 100%;
     text-align: center;
     margin-bottom: 1rem;
 }
 
-#contenedor-productos {
+#contenedorDeProductos {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
@@ -39,31 +39,30 @@ button {
     margin: 2rem;
 }
 
-.tarjeta-producto {
+.tarjetaDeProducto {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    width: 25%;
+    width: 30%;
     text-align: center;
     border: 1px solid #6a0dab;
     height: auto;
 }
 
-.tarjeta-producto img {
+.tarjetaDeProducto img {
     height: 140px;
     object-fit: contain;
     margin-bottom: .5rem;
 }
 
-.titulo-producto, 
-.precio-producto {
+.tituloDeProducto, 
+.precioDeProducto {
     color:#6a0dab;   
 }
 @media (max-width: 600px) {
     button {
         padding: 0.5rem;
     }
-    
 }
